Added Java options "-XX:MaxPermSize=64m -XX:ReservedCodeCacheSize=64m"